
    o	A package can contain a file 'R/sysdata.rda' to contain
	system datasets to be lazy-loaded into the namespace/package
	environment.

    o	The packages listed in 'Depends' are now loaded before a package
	is loaded (or its image is saved or it is prepared for lazy
	loading).  This means that almost all uses of R_PROFILE.R and
	install.R are now unnecessary.


BUG FIXES

    o	Complex superassignments were wrong when a variable with the same
	name existed locally, and were not documented in R-lang.

    o	rbind.data.frame() dropped names/rownames from columns in all
	but the first data frame.

    o	The dimnames<- method for data.frames was not checking the
	validity of the row names.

    o	Various memory leaks reported by valgrind have been plugged.

    o	gzcon() connections would sometimes read the crc bytes from
	the wrong place, possibly uninitialized memory.

    o	Rd.sty contained a length \middle that was not needed after a
	revision in July 2000.	It caused problems with LaTeX systems
	based on e-TeX which are starting to appear.

    o	save() to a connection did not check that the connection was
	open for writing, nor that non-ascii saves cannot be made to a
	text-mode connection.

    o	phyper() uses a new algorithm based on Morten Welinder's bug
	report (PR#6772).  This leads to faster code for large arguments
	and more precise code, e.g. for phyper(59, 150,150, 60,	lower=FALSE).
	This also fixes bug (PR#7064) about fisher.test().

    o	print.default(*, gap = <n>) now in principle accepts all
	non-negative values <n>.

    o	smooth.spline(...)$pen.crit had a typo in its computation;
	note this was printed in print.smooth.spline(*) but not used in
	other "smooth.spline" methods.

    o	write.table() handles zero-row and zero-column inputs correctly.

    o	debug() works on trivial functions instead of crashing (PR#6804)

    o	eval() could alter a data.frame/list second argument, so
	with(trees, Girth[1] <- NA) altered 'trees' (and any copy of